@@ -3,6 +3,7 @@
 * gui: #1713 implemented: added option to always show identity in buddies list (Vogel)
 * gui: #2309 implemented: added expand/collapse items to buddies list popup menu (Vogel)
 * gadu: TLS enabled by default for new accounts (Vogel)
+* sound: #383 implemented: option to configure per-buddy sound file (Vogel)
 
 +++ version 2.0-rc3
 * core: various crashes fixed (Vogel)
